SERVER-41369 Terminate the TransactionCoordinator retry logic if read concern majority is not available