jstests/replsets/prepare_transaction_fails_on_standalone.js
@@ -14,7 +14,8 @@
 
     assert.commandWorked(testDB.runCommand({create: collName}));
 
-    assert.commandFailedWithCode(testDB.adminCommand({prepareTransaction: 1}), 51239);
+    assert.commandFailedWithCode(testDB.adminCommand({prepareTransaction: 1}),
+                                 ErrorCodes.ReadConcernMajorityNotEnabled);
 
     MongoRunner.stopMongod(standalone);
 }());
