jstests/replsets/prepare_transaction_fails_with_arbiters.js
@@ -34,7 +34,8 @@
     session.startTransaction();
     assert.commandWorked(sessionColl.insert({_id: 42}));
 
-    assert.commandFailedWithCode(sessionDB.adminCommand({prepareTransaction: 1}), 50995);
+    assert.commandFailedWithCode(sessionDB.adminCommand({prepareTransaction: 1}),
+                                 ErrorCodes.ReadConcernMajorityNotEnabled);
 
     rst.stopSet();
 })();
