jstests/replsets/prepare_transaction_fails_without_majority_reads.js
@@ -27,7 +27,8 @@
     session.startTransaction();
     assert.commandWorked(sessionColl.insert({_id: 42}));
 
-    assert.commandFailedWithCode(sessionDB.adminCommand({prepareTransaction: 1}), 50993);
+    assert.commandFailedWithCode(sessionDB.adminCommand({prepareTransaction: 1}),
+                                 ErrorCodes.ReadConcernMajorityNotEnabled);
 
     rst.stopSet();
 })();
