jstests/sharding/single_shard_transaction_without_majority_reads_lagged.js
@@ -27,7 +27,7 @@
         shards: 1,
         rs: {
             nodes: [
-                {/* primary */ enableMajorityReadConcern: false},
+                {/* primary */ enableMajorityReadConcern: 'false'},
                 {/* secondary */ rsConfig: {priority: 0}}
             ]
         }
